octo-cluster/cluster/apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.77
          ports:
            - containerPort: 53 #dns
              name: dns
              protocol: UDP
            - containerPort: 3000 #initial setup
              name: http-initial
            - containerPort: 80 #web gui
              name: http
              protocol: TCP
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: adguard-data
              mountPath: /opt/adguardhome/conf
              subPath: conf
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-data
