octo-cluster/cluster/apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: adguard
  namespace: adguard
spec:
  ingressClassName: traefik
  rules:
    - host: "adguard.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
  tls:
    - hosts:
        - adguard.${SECRET_DOMAIN}
      secretName: adguard-tls
